diagnostics-deployed-js.txt
bytes: 587581
lines: 13562
sha256: 4d9e357eba8d5d4cdfe8ac337743b57e5a3f150bca16d837fa1e0f7dda788277
  9898: '    \'<th style="text-align:right;">Total Nominal</th>\' +'
  9899: '    \'<th style="text-align:center;color:#047857;">Dok. Lengkap</th>\' +'
  9900: '    \'<th style="text-align:right;color:#047857;">Nominal Lengkap</th>\' +'
  9901: '    \'<th style="text-align:center;color:#be123c;">Dok. Tdk Lengkap</th>\' +'
  9902: '    \'<th style="text-align:right;color:#be123c;">Nominal Tdk Lengkap</th>\' +'
  9903: '    \'<th style="text-align:center;color:#92400e;">Tanpa Bukti</th>\' +'
  9904: '    \'<th style="text-align:center;color:#92400e;">Tanpa Nota</th>\' +'
  9905: "    '</tr></thead>' +"
  9906: "    '<tbody>' + sppgRows + '</tbody>' +"
  9907: "    '</table>' +"
  9908: '    \'<script src="/laporan-fix.js?v=20260714-2"></script>'
  9909: "</body></html>';"
  9910: "  var win = window.open('', '_blank');"
  9911: '  if (!win) {'
  9912: "    showToast('error', 'Gagal', 'Pop-up diblokir browser. Izinkan pop-up lalu coba lagi.');"

script tags found: 8
script 1: external, start line 4, attrs='src="/session-fix.js?v=20260714-2"'
script 2: external, start line 10, attrs='defer src="https://use.fontawesome.com/releases/v6.4.0/js/all.js" crossorigin="anonymous"'
script 3: OK (HTML starts line 24, 29 lines)
script 4: external, start line 63, attrs='src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"'
script 5: external, start line 4073, attrs='src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"'
script 6: external, start line 4074, attrs='src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"'

script 7: FAILED (HTML starts line 6344)
/tmp/deployed-inline-7.js:3565
    '<script src="/laporan-fix.js?v=20260714-2">
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1713:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v22.23.1
HTML line estimate: 9908
Context:
  9896: "    '<th>SPPG</th>' +"
  9897: '    \'<th style="text-align:center;">Total Trx</th>\' +'
  9898: '    \'<th style="text-align:right;">Total Nominal</th>\' +'
  9899: '    \'<th style="text-align:center;color:#047857;">Dok. Lengkap</th>\' +'
  9900: '    \'<th style="text-align:right;color:#047857;">Nominal Lengkap</th>\' +'
  9901: '    \'<th style="text-align:center;color:#be123c;">Dok. Tdk Lengkap</th>\' +'
  9902: '    \'<th style="text-align:right;color:#be123c;">Nominal Tdk Lengkap</th>\' +'
  9903: '    \'<th style="text-align:center;color:#92400e;">Tanpa Bukti</th>\' +'
  9904: '    \'<th style="text-align:center;color:#92400e;">Tanpa Nota</th>\' +'
  9905: "    '</tr></thead>' +"
  9906: "    '<tbody>' + sppgRows + '</tbody>' +"
  9907: "    '</table>' +"
  9908: '    \'<script src="/laporan-fix.js?v=20260714-2"></script>'
  9909: "</body></html>';"
  9910: "  var win = window.open('', '_blank');"
  9911: '  if (!win) {'
  9912: "    showToast('error', 'Gagal', 'Pop-up diblokir browser. Izinkan pop-up lalu coba lagi.');"
  9913: '    return;'
  9914: '  }'
  9915: '  win.document.write(html);'
  9916: '  win.document.close();'
  9917: '  win.onload = function() { win.print(); };'
  9918: "  showToast('success', 'Export PDF', 'Jendela cetak/simpan PDF telah dibuka.');"
  9919: '}'
  9920: ''
script 8: OK (HTML starts line 12830, 730 lines)

failures: 1
